testphp7v2/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: testphp7
    app.kubernetes.io/component: testphp7
    app.kubernetes.io/instance: testphp7
  name: testphp7
  selfLink: /apis/apps.openshift.io/v1/namespaces/testphp7/deploymentconfigs/testphp7
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: testphp7
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: testphp7
    spec:
      containers:
      - image: testphp7:latest
        name: testphp7
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - testphp7
      from:
        kind: ImageStreamTag
        name: testphp7:latest
        namespace: testphp7
    type: ImageChange
