testphp7v2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"creationTimestamp":null,"labels":{"app":"testphp7","app.kubernetes.io/component":"testphp7","app.kubernetes.io/instance":"testphp7"},"name":"testphp7","namespace":"testphp7"},"spec":{"ports":[{"name":"8080-tcp","port":8080,"protocol":"TCP","targetPort":8080},{"name":"8443-tcp","port":8443,"protocol":"TCP","targetPort":8443}],"selector":{"deploymentconfig":"testphp7"}},"status":{"l [...]
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: testphp7
    app.kubernetes.io/component: testphp7
    app.kubernetes.io/instance: testphp7
  name: testphp7
  selfLink: /api/v1/namespaces/testphp7/services/testphp7
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deploymentconfig: testphp7
  sessionAffinity: None
  type: ClusterIP
